--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "use-debounce": "^10.0.3"
+    "use-debounce": "^10.0.3",
+    "vite-plugin-pwa": "^0.20.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
